--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ../css/style.css",
-    "watch": "tailwindcss -i ./src/input.css -o ../css/style.css --watch"
+    "build": "tailwindcss -i ../src/input.css -o ../css/style.css",
+    "watch": "tailwindcss -i ../src/input.css -o ../css/style.css --watch"
 
   },
   "keywords": [],
